deploy/api/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golfapp-api-canary
  labels:
    app: golfapp-api
spec:
  selector:
    app: golfapp-api
  ports:
    - name: http
      port: 80
      targetPort: http
