deploy/api/canary-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golfapp-api-canary
  annotations:
    addons_domain: placeholder-domain
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      namespace: traefik
  hostnames:
    - golfapp-api-canary.placeholder-domain
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: golfapp-api-canary
          port: 80
