deploy/api/preview-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golfapp-api-preview
  annotations:
    addons_domain: placeholder-domain
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      namespace: traefik
  hostnames:
    - golf-api-preview.placeholder-domain
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: golfapp-api-preview
          port: 80
